fix: align rewards items column left
Couldnt get right alig for the USD amount to go right.

--- a/src/views/Kingdoms/components/KingdomCard.css
+++ b/src/views/Kingdoms/components/KingdomCard.css
@@ -13,7 +13,9 @@
 }
 
 .k-card .flex-grid .col:last-child {
-  text-align: right;
+  /* text-align: right; */
+  display: flex;
+  flex-direction: column;
 }
 
 .k-card .col:nth-of-type(1) {
